tests/machine/x/go/list_set_ops.error
Error on line 0: output mismatch
-- got --
[1 2 3]
[1 3]
[2]
4
-- want --
1 2 3
1 3
2
4
1: //go:build ignore
